--- a/style.css
+++ b/style.css
@@ -279,6 +279,13 @@ p {
     opacity: .7;
 }
 
+#projects .project-img img{
+    transition: .3s ease-in-out transform;
+}
+
+#projects .project-item:hover .project-img img{
+    transform: scale(1.1)
+} 
 
 /* End Project section */
 
