--- a/style.css
+++ b/style.css
@@ -52,6 +52,24 @@ p {
     color: crimson;
 }
 
+.cta {
+    display: inline-block;
+    padding: 5px 15px;
+    color: white;
+    background-color: trasparent;
+    border: 2px solid crimson ;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    margin-top: 30px;
+    transition: .3s ease;
+    transition-property:s background-color, color;
+}
+
+.cta:hover {
+    color: white;
+    background-color: crimson;
+}
 /* Hero Section */
 #hero {
     background-size: cover;
@@ -120,24 +138,6 @@ p {
 }
 #hero h1:nth-child(3) span {
     animation-delay: 2.5s;
-}
-
-#hero .cta {
-    display: inline-block;
-    padding: 5px 15px;
-    color: crimson;
-    background-color: trasparent;
-    border: 2px solid crimson ;
-    font-size: 1rem;
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    margin-top: 30px;
-    transition: .3s ease;
-    transition-property:s background-color, color;
-}
-#hero .cta:hover {
-    color: white;
-    background-color: crimson;
 }
 /* End Hero Section */
 
@@ -288,6 +288,61 @@ p {
 } 
 
 /* End Project section */
+
+/* about section */
+#about .about {
+    flex-direction: column-reverse;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 20px;
+}
+
+#about .col-left {
+    width: 250;
+    height: 360;
+}
+
+#about .col-right h2 {
+    font-size: 1.8rem;
+    font-weight: 500;
+    letter-spacing: .2rem;
+    margin-bottom: 10px;
+}
+
+#about .col-right p {
+    margin-bottom: 20px;
+}
+
+#about .col-right .cta {
+    color: black;
+    margin-bottom: 50px;
+    padding: 10px 20px;
+    font-size: 2rem;
+}
+
+#about .col-left .about-img {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    border: 10px solid white;
+}
+/* #about .col-left .about-img img {
+    height: 50%;
+    width: 50%;
+} */
+
+#about .col-left .about-img::after {
+    content: '';
+    position: absolute;
+    left: -33px;
+    top: 19px;
+    height: 98%;
+    width: 98%;
+    border: 7px solid crimson;
+    z-index: -1;
+}
+/* end about section */
 
 /* keyframe */
 @keyframes text_reveal_box{
