--- a/style.css
+++ b/style.css
@@ -299,6 +299,9 @@ p {
 }
 
 #about .col-left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 250;
     height: 360;
 }
@@ -322,8 +325,8 @@ p {
 }
 
 #about .col-left .about-img {
-    height: 100%;
-    width: 100%;
+    height: 50%;
+    width: 50%;
     position: relative;
     border: 10px solid white;
 }
@@ -343,6 +346,49 @@ p {
     z-index: -1;
 }
 /* end about section */
+
+/* contact section */
+#contact .contact {
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#contact .contact-items {
+    width: 400px;
+}
+
+#contact .contact-item {
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+    padding: 30px;
+    border-radius: 10px;
+    margin:30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 18px 0px #0000002c;
+    transition: .3s ease-in-out box-shadow;
+}
+
+#contact .contact-item:hover {
+    box-shadow: 0px 0px 5px 0px #0000002c
+}
+
+#contact .icon {
+    width: 70px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+#contact .contact-info h2 {
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 500;
+}
+/* end contact section */
 
 /* keyframe */
 @keyframes text_reveal_box{
